kubernetes/smoketest-app/deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: smoketest-app
spec:
  selector:
    matchLabels:
      app: smoketest
  replicas: 3
  template:
    metadata:
      labels:
        app: smoketest
    spec:
      containers:
      - name: hello-world
        image: dockercloud/hello-world:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
