kubernetes/smoketest-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smoketest-loadbalancer
  labels:
    app: smoketest-loadbalancer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: service.smoke.xebik.art
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: smoketest
