kubernetes/smoketest-app/ingress-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smoketest-istio-vs
spec:
  hosts:
    - "smoke.istio.xebik.art"
  gateways:
    - xebikart-gateway
  http:
    - route:
      - destination:
          host: smoketest-nodeport
