kubernetes/smoketest-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smoketest-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress.smoke.xebik.art,smoke.xebik.art
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  backend:
    serviceName: smoketest-nodeport
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: smoketest-nodeport
  labels:
    app: smoketest-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: smoketest
